Fix bug where private page container did not fit page

--- a/app/assets/stylesheets/styles/index.css.scss
+++ b/app/assets/stylesheets/styles/index.css.scss
@@ -16,14 +16,6 @@
   }
 }
 
-#blogs {
-  #blogs-heading-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
 #projects {
   background: black;
   color: white;
